[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/skeleton/skeleton_right_2.png" type="Texture" id=1]
[ext_resource path="res://assets/skeleton/skeleton_right_1.png" type="Texture" id=2]
[ext_resource path="res://assets/skeleton/skeleton_front_2.png" type="Texture" id=3]
[ext_resource path="res://assets/skeleton/skeleton_front_3.png" type="Texture" id=4]
[ext_resource path="res://assets/skeleton/skeleton_back_2.png" type="Texture" id=5]
[ext_resource path="res://assets/skeleton/skeleton_left_1.png" type="Texture" id=6]
[ext_resource path="res://assets/skeleton/skeleton_back_1.png" type="Texture" id=7]
[ext_resource path="res://assets/skeleton/skeleton_idle_2.png" type="Texture" id=8]
[ext_resource path="res://assets/skeleton/skeleton_front_1.png" type="Texture" id=9]
[ext_resource path="res://assets/skeleton/skeleton_back_3.png" type="Texture" id=10]
[ext_resource path="res://assets/skeleton/skeleton_idle_3.png" type="Texture" id=11]
[ext_resource path="res://assets/skeleton/skeleton_left_2.png" type="Texture" id=12]
[ext_resource path="res://assets/skeleton/skeleton_left_3.png" type="Texture" id=13]
[ext_resource path="res://assets/skeleton/skeleton_right_3.png" type="Texture" id=14]
[ext_resource path="res://scripts/Skeleton.gd" type="Script" id=15]
[ext_resource path="res://scene/ActionArea.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/skeleton/skeleton_die.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 14 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 14.9373 )

[sub_resource type="CircleShape2D" id=3]
radius = 103.0

[node name="Skeleton" type="KinematicBody2D" groups=[
"skeleton",
]]
collision_layer = 4
collision_mask = 33806
script = ExtResource( 15 )
speed = 50

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "die"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.0878398 )
shape = SubResource( 2 )

[node name="FeelingsArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeelingsArea"]
shape = SubResource( 3 )

[node name="ActionArea" parent="." instance=ExtResource( 16 )]
[connection signal="body_entered" from="FeelingsArea" to="." method="_on_FeelingsArea_body_entered"]
[connection signal="body_exited" from="FeelingsArea" to="." method="_on_FeelingsArea_body_exited"]
